# ChangeLog for dev-libs/libnds
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Jun 2008; Mounir Lamouri (volkmar) <mounir.lamouri@gmail.com>
  libnds-20071023.ebuild:
  Ebuild enhancement

  06 Jan 2008; (Tommy[D]) tommy100@gmx.de libnds-20071023.ebuild:
  whitey

  27 Dec 2007; Mounir Lamouri (Volkmar) <mounir.lamouri@gmail.com>
  -libnds-20070503.ebuild, +libnds-20071023.ebuild:
  Update Ebuild for bug 179226.

  25 May 2007; Markus Ullmann <jokey@gentoo.org> libnds-20070503:
  cosmetics

  20 May 2007; Mounir Lamouri (Volkmar) <mounir.lamouri@gmail.com>
  +libnds-20070503.ebuild, +metadata.xml:
  New ebuild for bug 179226. Thanks Opfer for his help.
