@@ -1,4 +1,4 @@
-DIST libnds-src-20071023.tar.bz2 73597 RMD160 0daecb73b82027193665cdc58a7410567c62d193 SHA1 d1d25f9c2c509168c8f294d341d9bc7aa245b586 SHA256 b908de57a75bd6717785377f2a732d38344b11d8633e67dba3f2a8f768677abc
-EBUILD libnds-20071023.ebuild 807 RMD160 15facd621457d9f5b08fea48ac61f901264095ca SHA1 a9a730b4fcb8478518449892520b0e77ec6ccf2e SHA256 6cd4a29956d497f0a3eafe3678e27db20048915cf11a7dfffd5ca023b02c0868
-MISC ChangeLog 704 RMD160 7737b7270a81dc93beebf94c4fe29ee9b06d3992 SHA1 ca9701b0512db0e7337498306705470a213c5a05 SHA256 97b5e1aacf7f38d18080c205779d7e860bcbf17a829ee5cbf2a19221c58c27c9
+DIST libnds-src-1.4.3.tar.bz2 124223 RMD160 d1c697aaf3da70fb0acc4032eebc009b28fd8ed0 SHA1 17f3476c2d456a611bab4c3fde75f3d78d5a86a5 SHA256 6c692cdfffa6cffe255910fcc6e81ef92b4513c82c3d232202d4886dfc7654b5
+EBUILD libnds-1.4.3.ebuild 813 RMD160 604729423e7335038dc36589efca6746fd53baff SHA1 ff66ea98d7d3125b85504547a4f1cf450b36feda SHA256 d645b2d0412e1e2ca194605e6d4ffc23dfb4b42c6d48a43de2484121e6a7659e
+MISC ChangeLog 883 RMD160 8c966ee277cc0ac010cd9082e49794754d595541 SHA1 c755fdfba4712f7a0d2696aa55c1f4cca4c6e096 SHA256 3eb0ccb02b83aa3ecb668880484f8e420d4344563f99ec6de8cb1673dd678aed
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
