@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libnds
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*libnds-1.4.3 (03 Jul 2010)
+
+  03 Jul 2010; Michał Górny (sedzimir) <mgorny.3ehbo@mailnull.com>
+  +libnds-1.4.3.ebuild, -libnds-20071023.ebuild:
+  Version bump, minor cleanup.
 
   26 Jun 2008; Mounir Lamouri (volkmar) <mounir.lamouri@gmail.com>
   libnds-20071023.ebuild:
